#45 переход на openjdk13